--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Here are skillset I’ve been working with recently:
 
 <div class="container-fluid">
   <div class="card-body">
-   Built & Designed by Anant Kaushik - 2021
+   <center>Built & Designed by Anant Kaushik - 2021 </center>
 </div>
   </div>
 </div>
